# MirrorLingo

./: .gitignore  DEMO_READY.md  DEVLOG.md  QA_TEST_RESULTS.md  README.md  STRUCTURE.md  all_files.txt  demo-flow-test.sh  docker-compose.yml  jest.config.js  mobile-simulator.html  package-lock.json  package.json  test-conversation-memory.sh  test-pronunciation-evolution.sh  test-sync.sh
.agent/workflows/: android-build.md
.agents/code-reviews/: advanced-pronunciation-features-review.md  conversation-practice-2026-01-06.md  mirrorlingo-enhancement-review.md  mobile-app-final-2026-01-06.md  mobile-app-precommit-2026-01-06.md  mobile-app-review-2026-01-05.md
.agents/execution-reports/: mirrorlingo-mobile-app.md
.agents/plans/: README.md  enterprise-team-dashboard.md  letta-adaptive-learning-intelligence.md  letta-cross-platform-sync.md  letta-enhanced-conversation-relationships.md  letta-memory-integration.md  letta-mistake-pattern-learning.md  letta-personalized-learning-insights.md  letta-pronunciation-evolution.md  letta-spaced-repetition-sync.md  multi-language-support.md  real-time-conversation-practice.md  real-time-pronunciation-feedback.md  social-learning-features.md
.agents/system-reviews/: conversation-practice-review.md  letta-integration-review.md  mobile-app-review.md  pronunciation-feedback-review.md
.claude/: prp-ralph.state.md
.kiro/prompts/: execute.md  plan-feature.md
.kiro/settings/: lsp.json
.kiro/steering/: mobile.md  product.md  structure.md  tech.md
MirrorLingoMobile/: .env.example  AWS_INTEGRATION.md  App.tsx  README.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
MirrorLingoMobile/android/: build.gradle  local.properties  settings.gradle
MirrorLingoMobile/android/app/: build.gradle
MirrorLingoMobile/ios/: Podfile  Podfile.patch  boost-local.podspec  main.jsbundle
MirrorLingoMobile/ios/MirrorLingoMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
MirrorLingoMobile/ios/MirrorLingoMobile.xcodeproj/: project.pbxproj
MirrorLingoMobile/ios/MirrorLingoMobile.xcworkspace/: contents.xcworkspacedata
MirrorLingoMobile/src/__tests__/: code-review-fixes.test.ts
MirrorLingoMobile/src/components/: LoadingSpinner.tsx  TappableWord.tsx  VoiceRecorder.tsx
MirrorLingoMobile/src/hooks/: usePhrasesApi.ts  useSpacedRepetitionSync.ts
MirrorLingoMobile/src/screens/: AudioTestScreen.tsx  ConversationScreen.tsx  HomeScreen.tsx  PracticeScreen.tsx  ProgressScreen.tsx  RecordScreen.tsx  SettingsScreen.tsx  TrainingMixerScreen.tsx  TranslationsScreen.tsx  TutorScreen.tsx
MirrorLingoMobile/src/services/: api.ts  backgroundCapture.ts  notifications.ts  offline.ts
MirrorLingoMobile/src/styles/: designSystem.ts
MirrorLingoMobile/src/utils/: spacedRepetition.ts
backend/: .env.example  Dockerfile  local-server.js  package-lock.json  package.json
backend/src/__tests__/: bedrockService.test.ts  conversation-handler.test.ts  idiolect-analyzer.test.ts  lettaService.test.ts  phrase-handler.test.ts  pronunciationAnalysisService-fixes.test.ts  pronunciationAnalysisService.test.ts  spanishTranslationService.test.ts  translation-handler.test.ts
backend/src/handlers/: audio-handler.ts  conversation-handler.ts  conversation-memory-handler.ts  letta-handler.ts  phrase-handler.ts  pronunciation-handler.ts  translation-handler.ts
backend/src/models/: phrase.ts
backend/src/services/: bedrockService.ts  conversationMemoryService.ts  conversationService.ts  idiolectAnalyzer.ts  (+7 more)
docs/: API.md  ARCHITECTURE.md  AWS_DEPLOYMENT_STATUS.md  COMPONENTS.md  DEPLOYMENT.md  DEVLOG.md  FEATURES.md  FINAL_SUMMARY.md  HACKATHON_DEMO.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_SUMMARY.md  MOBILE_DEPLOYMENT.md  README.md
docs/rca/: background-mode-stuck-ready.md
examples/agentic-coding-course-main/: .gitignore  Excal-Course-Guide.excalidraw  README.md
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.yml  main.py  pyproject.toml  setup_pytest_prompt.md
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/alembic/: env.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/alembic/versions/: 7511aeae0f54_initial.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/app/: main.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/app/core/: config.py  database.py  exceptions.py  health.py  logging.py  middleware.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/app/core/tests/: test_config.py  test_database.py  test_exceptions.py  test_health.py  test_logging.py  test_middleware.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/app/shared/: __init__.py  models.py  schemas.py  utils.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/app/shared/tests/: test_models.py  test_schemas.py  test_utils.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/app/tests/: conftest.py  test_database_integration.py  test_main.py
examples/agentic-coding-course-main/module_5/workshop_ai_optimized_codebase/live_template_build/tests/: __init__.py  test_main.py  test_main_entrypoint.py
frontend/: .env.local  .env.local.example  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  server_render.html  tsconfig.tsbuildinfo
frontend/pages/: index.tsx
frontend/public/: manifest.json  sw.js
infrastructure/: template.yaml
infrastructure/scripts/: deploy-production.sh  deploy.sh  test-local.sh
tests/integration/: phrase-handler.test.ts
tests/property/: spacedRepetition.test.ts
tests/setup/: aws-mocks.ts
tests/unit/: spacedRepetitionStats.test.ts  usePhrasesApi.test.tsx
(+170 files in other folders)
