[project]
name = "vsa-fastapi-project"
version = "0.1.0"
description = "FastAPI + PostgreSQL starter with vertical slice architecture, optimized for AI coding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
# AI-optimized configuration for self-correction
line-length = 88
indent-width = 4
target-version = "py312"

# Comprehensive file discovery
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable comprehensive rule sets for AI self-correction
# E/W: pycodestyle errors and warnings
# F: Pyflakes (undefined names, unused imports, etc.)
# I: isort (import sorting)
# N: pep8-naming
# D: pydocstyle (docstrings)
# UP: pyupgrade (modernize Python code)
# B: flake8-bugbear (detect likely bugs)
# A: flake8-builtins (avoid shadowing builtins)
# C4: flake8-comprehensions (better list/dict comprehensions)
# T20: flake8-print (detect print statements)
# SIM: flake8-simplify (simplify code)
# RUF: Ruff-specific rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

# Allow specific patterns that are common in development
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
]

# Enable auto-fixing for all fixable rules (critical for AI self-correction)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes by default
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Use line feed for line endings
line-ending = "auto"

# Format code snippets in docstrings
docstring-code-format = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff.lint.isort]
# Organize imports clearly for AI readability
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
known-first-party = ["app"]

[tool.mypy]
# AI-optimized MyPy configuration for comprehensive type checking

# Python version matching project requirements
python_version = "3.12"

# Strict mode - enables all optional error checking flags
strict = true

# Additional type checking flags for AI self-correction
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Disallow dynamic typing for maximum type safety
disallow_any_unimported = true
disallow_any_explicit = false  # Allow explicit Any when needed
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions - strict enforcement
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Error reporting - enhanced for AI readability
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true
color_output = true
error_summary = true
show_error_codes = true

# Import discovery
namespace_packages = true
ignore_missing_imports = false
follow_imports = "normal"

# Miscellaneous strictness
strict_equality = true
strict_concatenate = true

# Cache for faster subsequent runs
incremental = true
cache_dir = ".mypy_cache"

# Third-party library configuration
[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true

[tool.pyright]
# AI-optimized Pyright configuration for comprehensive type checking
# Provides a second layer of type safety alongside MyPy

# Type checking mode - most comprehensive
typeCheckingMode = "strict"

# Python version and platform
pythonVersion = "3.12"
pythonPlatform = "All"

# Include/exclude patterns
include = ["."]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "**/.venv",
    "**/venv",
]

# Strict type evaluation settings
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
analyzeUnannotatedFunctions = true

# Enhanced diagnostic rules (all set to "error" for maximum strictness)
reportMissingImports = "error"
reportMissingTypeStubs = "warning"  # Warning since many libraries lack stubs
reportImportCycles = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"

# Type compatibility and consistency
reportGeneralTypeIssues = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportMissingTypeArgument = "error"
reportInvalidTypeVarUse = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"

# Optional type handling
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"

# Argument and return type checking
reportArgumentType = "error"
reportAssignmentType = "error"
reportReturnType = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"

# Code quality and best practices
reportUnreachable = "error"
reportUndefinedVariable = "error"
reportPrivateUsage = "error"
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportInvalidStringEscapeSequence = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportMissingParameterType = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"

# Abstract class and protocol enforcement
reportAbstractUsage = "error"
reportUnsupportedDunderAll = "error"
reportUnusedCallResult = "error"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"

# Import and usage validation
reportWildcardImportFromLibrary = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# Library analysis settings
useLibraryCodeForTypes = true
stubPath = "typings"

[tool.pytest.ini_options]
# AI-optimized pytest configuration

# Test discovery
testpaths = ["tests", "app"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async configuration
asyncio_mode = "auto"  # Auto mode for asyncio-only projects
asyncio_default_fixture_loop_scope = "function"  # Explicit function scope
asyncio_default_test_loop_scope = "function"  # Explicit function scope

# Output and reporting
addopts = [
    "-v",                           # Verbose output
    "--strict-markers",             # Enforce marker registration
    "--strict-config",              # Enforce configuration validation
    "--tb=short",                   # Shorter traceback format
    "--cov=.",                      # Coverage for current directory
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=html",            # Generate HTML coverage report
    "--cov-fail-under=80",          # Require 80% coverage minimum
]

# Markers
markers = [
    "asyncio: mark test as async test",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.*",
    "**/.venv/*",
    "**/venv/*",
    "main.py",  # Example file not part of core functionality
    "app/main.py",  # Example file demonstrating logging usage
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
    "if __name__ == .__main__.:",
    "def main\\(\\) -> None:",
]

[tool.coverage.html]
directory = "htmlcov"
